--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,15 +1,65 @@
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/set_geofence_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_done_white_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintRight_toRightOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintVertical_bias="0.5"/>
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/geofence_status_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:background="@drawable/drop_shadow_reverse"
+        app:layout_constraintBottom_toTopOf="@+id/geofence_status_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <TextView
+        android:id="@+id/geofence_status_view"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:background="@color/outside"
+        android:gravity="center"
+        android:text="@string/geofence_outside"
+        android:textAlignment="gravity"
+        android:textAllCaps="true"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/latitude_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/latitude_layout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_field_box"
-        android:paddingTop="16dp">
+        android:paddingTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/longitude_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/latitude_prompt"
@@ -22,16 +72,20 @@
             android:inputType="numberDecimal"
             android:maxLines="1"
             android:paddingLeft="16dp"
-            android:paddingRight="16dp"/>
+            android:paddingRight="16dp"
+            android:textSize="16sp"/>
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/longitude_layout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_field_box"
-        android:paddingTop="12dp">
+        android:paddingTop="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/radius_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/longitude_prompt"
@@ -44,16 +98,22 @@
             android:inputType="numberDecimal"
             android:maxLines="1"
             android:paddingLeft="16dp"
-            android:paddingRight="16dp"/>
+            android:paddingRight="16dp"
+            android:textSize="16sp"/>
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/radius_layout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
         android:background="@drawable/edit_field_box"
-        android:paddingTop="12dp">
+        android:paddingBottom="8dp"
+        android:paddingTop="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/radius_prompt"
@@ -62,33 +122,13 @@
             android:background="@android:color/transparent"
             android:ems="10"
             android:hint="@string/geofence_radius"
-            android:imeOptions="actionNext"
+            android:imeOptions="actionDone"
             android:inputType="numberDecimal"
             android:maxLines="1"
             android:paddingLeft="16dp"
-            android:paddingRight="16dp"/>
+            android:paddingRight="16dp"
+            android:textSize="16sp"/>
 
     </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/set_geofence_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/set_geofence"/>
-
-    <TextView
-        android:id="@+id/geofence_status_view"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/outside"
-        android:textAlignment="gravity"
-        android:gravity="center"
-        android:text="@string/geofence_outside"
-        android:textSize="24sp"
-        android:textAllCaps="true"/>
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
