--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -13,24 +13,24 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:src="@drawable/ic_done_white_24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintRight_toRightOf="@+id/view"
-        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintBottom_toTopOf="@+id/shadow_view"
+        app:layout_constraintRight_toRightOf="@+id/shadow_view"
+        app:layout_constraintTop_toTopOf="@+id/shadow_view"
         app:layout_constraintVertical_bias="0.5"/>
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/geofence_status_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/shadow_view"
         android:layout_width="match_parent"
-        android:layout_height="6dp"
+        android:layout_height="4dp"
         android:background="@drawable/drop_shadow_reverse"
         app:layout_constraintBottom_toTopOf="@+id/geofence_status_view"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -39,13 +39,14 @@
     <TextView
         android:id="@+id/geofence_status_view"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="48dp"
         android:background="@color/outside"
         android:gravity="center"
         android:text="@string/geofence_outside"
         android:textAlignment="gravity"
         android:textAllCaps="true"
-        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/latitude_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
