--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -114,13 +114,24 @@
         android:maxLines="1"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:textSize="16sp"
         android:background="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/latitude_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:text="Wi-Fi Spot"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/hint_view_bg"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/latitude_layout"
+        android:layout_height="1dp"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/latitude_layout"
